# google_cloud_bucket_viewer

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh  setup-permissions.sh
.github/: copilot-instructions.md
frontend/: .gitignore  index.html  package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/src/: App.css  App.svelte
frontend/src/components/: BucketSelector.svelte  ImageGallery.svelte  ImageModal.svelte
frontend/src/lib/: api.js
frontend/src/stores/: bucket.js
src/: api.py  config.py  gcs_service.py  main.py
